--- a/templates/default/stripe_history.html.twig
+++ b/templates/default/stripe_history.html.twig
@@ -66,8 +66,13 @@
                 </span>#}
             </td>
             <td class="collapsing" data-col-label="{{ _T("Date") }}">
-                {% if log.duplicate is defined %}<img class="img-dup" src="{{ url_for("plugin_res", {"plugin": module_id, "path": "images/warning.png"}) }}" alt="{{ _T("duplicate", "stripe") }}"/>{% endif %}
                 {{ log.history_date|date(_T("Y-m-d H:i:s")) }}
+                {% if log.duplicate is defined %}
+                    <i class="exclamation circle red icon tooltip" data-html="{{ _T("duplicate", "stripe") }}"></i>
+                    <span class="visually-hidden">
+                        {{ _T("duplicate", "stripe") }}
+                    </span>
+                {% endif %}
             </td>
             <td data-col-label="{{ _T("Name") }}">
         {% if log.metadata is iterable %}
