--- a/templates/default/stripe_preferences.html.twig
+++ b/templates/default/stripe_preferences.html.twig
@@ -2,7 +2,7 @@
 /**
  * Copyright © 2003-2025 The Galette Team
  *
- * This file is part of Galette (https://galette.eu).
+ * This file is part of Galette Stripe plugin (https://galette-community.github.io/plugin-stripe).
  *
  * Galette is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
